resolve #81 -- add search bar inside file explorer modal - align disk summary to center

--- a/src/app/torrents-table/global-transfer-info/global-transfer-info.component.scss
+++ b/src/app/torrents-table/global-transfer-info/global-transfer-info.component.scss
@@ -13,7 +13,6 @@
       #disk_summary, #global_transfer {
         display: flex;
         flex-direction: row;
-        align-items: center;
         justify-content: space-between;
 
         width: 50%;
